--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -8,7 +8,7 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Predict</a>
+                        <a class="nav-link" href="/predict">Predict</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/">Veges!</a>
