--- a/application/templates/predict.html
+++ b/application/templates/predict.html
@@ -31,7 +31,12 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h3 class="mt-3">I'm 90% sure it is a Bean!</h3>
+                    {% if file_url is not none %}
+                        <h3 class="mt-3">I'm {{response[1] | round(0)}}% sure it is a {{vegetable_list[response[0]]}}!</h3>
+                    {% else %}  
+                        <h3 class="mt-3">Elmo is not sure!</h3>
+                    {% endif %}
+                    
                 </div>
             </div>
         </div>
