--- a/application/templates/predict.html
+++ b/application/templates/predict.html
@@ -16,9 +16,9 @@
 
                 {{ form.submit(class_='btn btn-primary') }}
             </form>
-            {% if file_url is not none %}
+            {% if img_64 is not none %}
                 <div class="mt-5">
-                    <img src="{{ file_url }}" style="width: 30vw" alt="">
+                    <img src="data:image/jpeg;base64,{{ img_64 }}" style="width: 30vw" alt="">
                 </div>
             {% endif %}
         </div>
@@ -31,7 +31,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 text-center">
-                    {% if file_url is not none %}
+                    {% if response is not none %}
                         <h3 class="mt-3">I'm {{response[1] | round(0)}}% sure it is a {{vegetable_list[response[0]]}}!</h3>
                     {% else %}  
                         <h3 class="mt-3">Elmo is not sure!</h3>
