--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -11,7 +11,7 @@
                         <a class="nav-link" href="/predict">Predict</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Veges!</a>
+                        <a class="nav-link" href="/veges">Veges!</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/">History</a>
