--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -17,10 +17,10 @@
                         <a class="nav-link" href="/">History</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Profile</a>
+                        <a class="nav-link" href="/profile">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Login/Signup</a>
+                        <a class="nav-link" href="/login">Login/Signup</a>
                     </li>
                 </ul>
             </nav>
