--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -19,9 +19,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/profile">Profile</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/login">Login/Signup</a>
-                    </li>
+                    {% if current_user.is_authenticated  %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login">Login/Signup</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </nav>
         </div>
