Related to #52, minor improvement to auth

--- a/application/templates/error.html
+++ b/application/templates/error.html
@@ -6,8 +6,13 @@
         <div class="col-md-12 text-center">
             <img src="../static/images/error.png" alt="Error Image" class="img-fluid mb-4">
             <div class="error-box p-4">
-                <h1 class="display-4">Oops! Something went wrong.</h1>
-                <p class="lead">We're sorry, but there was an error processing your request.</p>
+                {% if error_code == 404 %}
+                    <h1 class="display-4">You have wandered too far!.</h1>
+                    <p class="lead">Looks like this page doesn't exist. Maybe it's hiding with Waldo?</p>
+                {% else %}
+                    <h1 class="display-4">Oops! Something went wrong.</h1>
+                    <p class="lead">We're sorry, but there was an error processing your request.</p>
+                {% endif %}
                 <p>Please try again later or contact support if the problem persists. Error Code: {{error_code}}</p>
                 <a href="/" class="btn btn-primary btn-lg mt-3">Go back to homepage</a>
             </div>
