--- a/application/templates/predict.html
+++ b/application/templates/predict.html
@@ -7,12 +7,20 @@
         <div class="col-md-6">
             <form method="post" enctype="multipart/form-data">
                 {{ form.hidden_tag() }}
-                
-                {{ form.photo(class_='form-control') }}
 
-                {% for error in form.photo.errors %}
-                    <span>{{error}}</span>
-                {% endfor %}
+                <div class="form-group">
+                    {{ form.photo(class_='form-control') }}
+                    {% for error in form.photo.errors %}
+                        <span class="error-message">{{ error }}</span>
+                    {% endfor %}
+                </div>
+
+                <div class="form-group">
+                    {{ form.comments(class_='form-control', placeholder='Comments to make it easier to find later! (optional)') }}
+                    {% for error in form.comments.errors %}
+                        <span class="error-message">{{ error }}</span>
+                    {% endfor %}
+                </div>
 
                 {{ form.submit(class_='btn btn-primary') }}
             </form>
