--- a/application/templates/history.html
+++ b/application/templates/history.html
@@ -51,4 +51,34 @@
     </div>
 </form>
 
+<table class="table table-striped table-bordered">
+    <thead class="thead-dark">
+        <tr>
+            <th>Image</th>
+            <th>Veggie</th>
+            <th>Percentage</th>
+            <th>Your Comment</th>
+            <th>Date</th>
+            <th>Remove?</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for entry in history_data %}
+        <tr>
+            <td><img src="{{ entry.image_url }}" alt="Image"></td>
+            <td>{{ entry.vegeID }}</td>
+            <td>{{ entry.percentage }}</td>
+            <td>{{ entry.comment }}</td>
+            <td>{{ entry.date }}</td>
+            <td>
+                <form action="{{ url_for('removeHistory', hist=entry.histID) }}" method="post">
+                    <button type="submit" class="btn btn-primary btn-sm">Remove</button>
+                </form>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+
 {% endblock content %}
