--- a/application/templates/history.html
+++ b/application/templates/history.html
@@ -65,13 +65,13 @@
     <tbody>
         {% for entry in history_data %}
         <tr>
-            <td><img src="{{ entry.image_url }}" alt="Image"></td>
-            <td>{{ entry.vegeID }}</td>
+            <td><img src="{{ entry.filename }}" alt="Image"></td>
+            <td>{{ entry.id }}</td>
             <td>{{ entry.percentage }}</td>
             <td>{{ entry.comment }}</td>
             <td>{{ entry.date }}</td>
             <td>
-                <form action="{{ url_for('removeHistory', hist=entry.histID) }}" method="post">
+                <form action="/" method="post">
                     <button type="submit" class="btn btn-primary btn-sm">Remove</button>
                 </form>
             </td>
