--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -14,7 +14,7 @@
                         <a class="nav-link" href="/veges">Veges!</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/">History</a>
+                        <a class="nav-link" href="/history">History</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/profile">Profile</a>
