--- a/application/templates/history.html
+++ b/application/templates/history.html
@@ -66,7 +66,7 @@
         {% for entry in history_data %}
         <tr>
             <td><img src="{{ entry.filename }}" alt="Image"></td>
-            <td>{{ entry.id }}</td>
+            <td>{{ entry.vegeID }}</td>
             <td>{{ entry.percentage }}</td>
             <td>{{ entry.comment }}</td>
             <td>{{ entry.date }}</td>
