--- a/application/templates/history.html
+++ b/application/templates/history.html
@@ -71,7 +71,7 @@
             <td>{{ entry.comment }}</td>
             <td>{{ entry.date }}</td>
             <td>
-                <form action="/" method="post">
+                <form action="{{url_for('removeHist', histid = entry.histID)}}" method="post">
                     <button type="submit" class="btn btn-primary btn-sm">Remove</button>
                 </form>
             </td>
