--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col-md-12 text-center" id ="butHolder">
                     {% if current_user.is_authenticated  %}
-                    <a href="/" class="btn btn-success btn-lg btn-block py-4">Our Friendship Journey...</a>
+                    <a href="/history" class="btn btn-success btn-lg btn-block py-4">Our Friendship Journey...</a>
                     {% else %}
                         <a href="/login" class="btn btn-success btn-lg btn-block py-4">Join my GANG!</a>
                     {% endif %}
