--- a/application/templates/includes/vegeCard.html
+++ b/application/templates/includes/vegeCard.html
@@ -1,7 +1,7 @@
 <div class="card mb-3">
     <img src="{{ image_src }}" class="card-img-top" alt="{{ title }}">
     <div class="card-body">
-      <h5 class="card-title">{{ title }}</h5>
+      <h5 class="card-title"><a href="/info/{{link}}"  style="text-decoration: none;">{{ title }}</a></h5>
       <p class="card-text">{{ description }}</p>
     </div>
 </div>
