--- a/application/templates/history.html
+++ b/application/templates/history.html
@@ -1,7 +1,18 @@
 {% extends 'layout.html' %}
 
 {% block content %}
+<div class="row justify-content-center text-center align-items-center">
+    <h1 class="col-md-4">Our Friendship Journey...</h1>
+    <div class="col-md-4">
+        <img src="../static/images/thinking_tomato.png" alt="" style="max-width: 80%; height: auto;">
+    </div>
+</div>
+{% if history_data == [] %}
 
+<div class="alert alert-info text-center mt-3" role="alert">
+    It seems you haven't played any games with me :( Play some to add more life to our Journey!
+</div>
+{% else %}
 <form method="post">
     {{ form.hidden_tag() }}
     <div class="row  align-items-center">
@@ -50,29 +61,32 @@
         </div>
     </div>
 </form>
+<hr>
+
 
 <table class="table table-striped table-bordered">
     <thead class="thead-dark">
         <tr>
-            <th>Image</th>
-            <th>Veggie</th>
-            <th>Percentage</th>
+            <th>Your Challenge</th>
+            <th>My Guess</th>
+            <th>Certainty Level</th>
             <th>Your Comment</th>
             <th>Date</th>
-            <th>Remove?</th>
+            <th>Forget? :(</th>
         </tr>
     </thead>
     <tbody>
         {% for entry in history_data %}
         <tr>
             <td><img src="{{ entry.filename }}" alt="Image"></td>
-            <td>{{ entry.vegeID }}</td>
+            <td>{{ vegetable_list[entry.vegeID -1] }}</td>
             <td>{{ entry.percentage }}</td>
             <td>{{ entry.comment }}</td>
-            <td>{{ entry.date }}</td>
+            <td>{{ entry.date.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+
             <td>
                 <form action="{{url_for('removeHist', histid = entry.histID)}}" method="post">
-                    <button type="submit" class="btn btn-primary btn-sm">Remove</button>
+                    <button type="submit" class="btn btn-danger btn-sm">Forget</button>
                 </form>
             </td>
         </tr>
@@ -80,5 +94,6 @@
     </tbody>
 </table>
 
+{% endif %}
 
 {% endblock content %}
