--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -2,13 +2,13 @@
     <div class="row">
         <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand border p-2" href="/">Giggles Gears</a>
+                <a class="navbar-brand border p-2" href="/">Tommy's VegeGame</a>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/predict">Predict</a>
+                        <a class="nav-link" href="/predict">Let's Play</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/veges">Veges!</a>
