--- a/application/templates/predict.html
+++ b/application/templates/predict.html
@@ -15,26 +15,38 @@
                     {% endfor %}
                 </div>
 
-                <div class="form-group">
-                    {{ form.comments(class_='form-control', placeholder='Comments to make it easier to find later! (optional)') }}
-                    {% for error in form.comments.errors %}
-                        <span class="error-message">{{ error }}</span>
-                    {% endfor %}
-                </div>
+                
 
+                
+                {% if img_64 is not none %}
+                    <div class="mt-5">
+                        <img src="data:image/jpeg;base64,{{ img_64 }}" style="width: 30vw; height: 30vw;" alt="">
+                    </div>
+                {% else %}
+                    <div class="mt-5 bg-light d-flex justify-content-center align-items-center" style="width: 30vw; height: 30vw;">
+                        Not yet uploaded sweety...
+                    </div>
+                {% endif %}
+                    <hr>
+                    <div class="form-group">
+                        {{ form.comments(class_='form-control', placeholder='Comments to make it easier to find later! (optional)') }}
+                        {% for error in form.comments.errors %}
+                            <span class="error-message">{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    <hr>
                 {{ form.submit(class_='btn btn-primary') }}
             </form>
-            {% if img_64 is not none %}
-                <div class="mt-5">
-                    <img src="data:image/jpeg;base64,{{ img_64 }}" style="width: 30vw" alt="">
-                </div>
-            {% endif %}
         </div>
 
         <div class="col-md-6 d-flex flex-column justify-content-center">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <img src="../static/images/thinking_tomato.png" alt="Tommy the Tomato" class="img-fluid">
+                    {% if not done %}
+                    <img src="../static/images/sleeping.png" alt="Tommy the Tomato" class="img-fluid">
+                    {% else %} 
+                    <img src="../static/images/happy.png" alt="Tommy the Tomato" class="img-fluid">
+                    {% endif %}
                 </div>
             </div>
             <div class="row">
@@ -43,7 +55,7 @@
                         <h3 class="mt-3">I'm {{response[1] | round(0)}}% sure it is a {{vegetable_list[response[0]]}}!</h3>
                         <a href="{{ url_for('vege_info', id=(response[0]+1)) }}">Learn more about {{vegetable_list[response[0]]}}s</a>
                     {% else %}  
-                        <h3 class="mt-3">Elmo is not sure!</h3>
+                        <h3 class="mt-3">Tommy is sleeping... zzz</h3>
                     {% endif %}
                     
                 </div>
