--- a/application/templates/profile.html
+++ b/application/templates/profile.html
@@ -1,28 +1,35 @@
 {% extends 'layout.html' %}
 
 {% block content %}
+
+<div class="row justify-content-center text-center align-items-center">
+    <h1 class="col-md-4">About You!</h1>
+    <div class="col-md-4">
+        <img src="../static/images/cool.png" alt="" style="max-width: 80%; height: auto;">
+    </div>
+  </div>
+
 <form action="/profile" method="post">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
             <fieldset class="form-group">
-                <legend>{{ title }}</legend>
                 {{ form.hidden_tag() }}
-                <div class="form-group">
+                <div class="form-group mb-4"> 
                     {{ form.name.label }}
                     {{ form.name(class="form-control", value=current_user.name) }}
                 </div>
-                <div class="form-group">
+                <div class="form-group mb-4"> 
                     <label for="email">Email:</label>
                     <input type="email" class="form-control" id="email" value="{{ current_user.email }}" disabled>
                 </div>
-                <div class="form-group">
+                <div class="form-group mb-4"> 
                     {{ form.new_password.label }}
                     {{ form.new_password(class="form-control") }}
                 </div>
             </fieldset>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-12">
             <div class="btn-container text-center">
                 <div class="row mt-5">
                     <div class="col-12 my-1">
