--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -7,7 +7,7 @@
         <div class="col-md-6">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <h3 class="mt-3">Hi there! I'm Tommy the Tomato</h3>
+                    <h3 class="mt-3">Hi there! I'm Tommy the Tomato (slight change)</h3>
                 </div>
             </div>
             <div class="row">
